--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ footer a {
   height: 630px;
   width: 450px;
   margin-top: 80px;
-  margin-left: 180px;
+  margin-left: 30em;
   margin-right: 100px;
   display: inline-block;
   border-radius: 20px;
