--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,10 @@ footer a {
   display: inline-block;
   vertical-align: top;
   text-align: left;
-  margin-left: auto;
-  margin-top: 6em;
-  width: 400px;
-  height: 580px;
+  margin-left: 4rem;
+  margin-top: 8rem;
+  width: 28rem;
+  height: 34rem;
   border-radius: 20px;
   box-shadow: 0px 5px 15px 8px rgba(0, 0, 0, .5);
 }
@@ -118,11 +118,11 @@ footer a {
 }
 
 .picture {
-  height: 630px;
-  width: 450px;
-  margin-top: 80px;
-  margin-left: 30em;
-  margin-right: 100px;
+  height: 39rem;
+  width: 29rem;
+  margin-top: 6rem;
+  margin-left: 10rem;
+  margin-right: 2rem;
   display: inline-block;
   border-radius: 20px;
   background-color: rgba(43, 131, 96, .4);
