--- a/css/style.css
+++ b/css/style.css
@@ -103,15 +103,13 @@ footer a {
   text-align: left;
   margin-top: 8rem;
   width: 28rem;
-  height: 33rem;
+  height: 34rem;
   border-radius: 20px;
   box-shadow: 0px 5px 15px 8px rgba(0, 0, 0, .5);
 }
 
 .content:hover {
-  padding: 0;
   background-color: rgba(43, 131, 96, .2);
-  transition: .4s ease;
 }
 
 .content li {
@@ -141,11 +139,10 @@ footer a {
 }
 
 .picture h4 {
-  height: 630px;
-  width: 400px;
+  height: 38rem;
+  width: 28rem;
   text-align: left;
   justify-content: left;
-  box-shadow: none;
   margin-left: 10px;
   margin-top: 10px;
   margin-bottom: 0;
