--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ footer a {
   text-align: left;
   justify-content: left;
   margin-left: 10px;
+  margin-right: 10px;
   margin-top: 10px;
   margin-bottom: 0;
   position: absolute;
