--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  background-color: #76BA9F;
+  background-color: #FAF7EE;
 }
 
 header {
@@ -38,7 +38,7 @@ h1 {
 h2 {
   font-family: FuturaDisplayBQ;
   letter-spacing: 1.8px;
-  color: #FAF7EE;
+  color: #2B835F;
   font-size: 32px;
   padding-top: 8px;
   padding-left: 10px;
@@ -103,10 +103,15 @@ footer a {
   text-align: left;
   margin-top: 8rem;
   width: 28rem;
-  height: 34rem;
+  height: 33rem;
   border-radius: 20px;
-  background-color: rgba(43, 131, 96, .4);
-  box-shadow: 0px 5px 15px 8px rgba(0, 0, 0, .5);
+  box-shadow: 0px 5px 5px 10px rgba(0, 0, 0, .5);
+}
+
+.content:hover {
+  padding: 0;
+  background-color: rgba(43, 131, 96, .3);
+  transition: .4s ease;
 }
 
 .content li {
@@ -126,13 +131,11 @@ footer a {
   margin-right: 3rem;
   display: inline-block;
   border-radius: 20px;
-  background-color: rgba(43, 131, 96, .4);
-  box-shadow: 0px 5px 15px 8px rgba(0, 0, 0, .5);
+  box-shadow: 0px 5px 5px 10px rgba(0, 0, 0, .5);
 }
 
 .picture:hover {
   background-image: linear-gradient(210deg,#20B2AA, #00CED1, #40E0D0, #00FFFF, #E0FFFF, #FFF5EE, #FFFFFF);
-  transition: .4s ease;
 }
 
 .picture h4 {
@@ -140,8 +143,8 @@ footer a {
   width: 28rem;
   text-align: left;
   justify-content: left;
+  box-shadow: none;
   margin-left: 10px;
-  margin-right: 10px;
   margin-top: 10px;
   margin-bottom: 0;
   position: absolute;
