--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
   h2 {
     font-family: FuturaDisplayBQ;
     letter-spacing: 1.8px;
-    color: #FAF7EE;
+    color: #2B835F;
     font-size: 38px;
     padding-top: 8px;
     padding-left: 10px;
@@ -110,13 +110,14 @@
     width: 28rem;
     height: 38rem;
     border-radius: 10px;
+    background-color: #FAF7EE;
     box-shadow: 0 8px 3px 5px rgba(0, 0, 0, .5);
   }
 
   .content li {
     list-style-type: square;
     font-family: 'Bitter', serif;
-    font-size: 18px;
+    font-size: 19px;
     line-height: 20px;
     margin-top: 10px;
     margin-right: 10px;
