--- a/css/style.css
+++ b/css/style.css
@@ -1,211 +1,199 @@
-  @font-face {
-    font-family: FuturaDisplayBQ;
-    src: url(../css/Futura\ Display\ BQ\ Regular.otf);
-  }
+@font-face {
+  font-family: FuturaDisplayBQ;
+  src: url(../css/Futura\ Display\ BQ\ Regular.otf);
+}
 
-  @font-face {
-    font-family: FuturaLightBT;
-    src: url(../css/FuturaLightBT.ttf);
-  }
+body {
+  background-image: linear-gradient(to bottom, #2B835F, #76BA9F, #2B835F);
+  padding-top: 50px;
+}
 
-  @font-face {
-    font-family: FuturaMediumBT;
-    src: url(../css/FuturaMediumBT.ttf);
-  }
+header h1 {
+  text-align: center;
+  font-size: 80px;
+  font-family: FuturaDisplayBQ;
+  color: #F9F6EE;
+  letter-spacing: 5px;
+  margin-top: 50px;
+  margin-bottom: 2em;
+}
 
-  body {
-    background-color: #D7F0E6;
-  }
+.deku-img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 350px;
+  height: 350px;
+  border-radius: 190px;
+  border-style: solid;
+  border-color: #F9F6EE;
+  border-width: 12px;
+  display: block;
+}
 
-  header {
-    background-color: #2B835F;
-    width: 100%;
-    height: 640px;
-    margin: 0;
-    padding-top: 20px;
-  }
+.box {
+  width: 100%;
+}
 
-  h1 {
-    text-align: center;
-    font-family: FuturaDisplayBQ;
-    font-size: 66px;
-    color: #FAF7EE;
-    margin-top: 20px;
-    letter-spacing: 1.3px;
-    box-shadow: 0 0 8px 1px rgba(0, 0, 0, .5);
-  }
+.box2 {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  background-color: rgba(4, 82, 51, .4);
+  border-radius: 32px;
+}
 
-  h2 {
-    font-family: FuturaDisplayBQ;
-    letter-spacing: 1.8px;
-    color: #2B835F;
-    font-size: 38px;
-    padding-top: 8px;
-    padding-left: 10px;
-    margin-bottom: 0;
-  }
+.box-for-image {
+  width: 300px;
+  margin: 64px 16px 64px 32px;
+  display: inline-block;
+}
 
-  hr {
-    margin-top: 5em;
-    margin-bottom: 0;
-  }
+.deku-pic {
+  width: auto;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 
-  p {
-    font-size: 18px;
-    font-family: 'Bitter', serif;
-    padding-left: 15px;
-    padding-bottom: 10px;
-    margin-top: 10px;
-    margin-right: 10px;
-    line-height: 20px;
-    text-indent: 20px;
-    color: #1B1212;
-  }
+.box-description {
+  width: 500px;
+  display: inline-block;
+  vertical-align: top;
+  margin: 125px 32px 64px 16px;
+  padding: 12px 32px 12px 32px;
+  background-color: #F9F6EE;
+  border-radius: 16px;
+}
 
-  footer {
-    text-align: center;
-    font-family: FuturaLightBT;
-    font-size: 16px;
-    color: #76BA9F;
-    background-color: #2B835F;
-    margin-top: 0;
-  }
+.box3 {
+  width: max-content;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 
-  footer a {
-    color: #76BA9F;
-    text-decoration: none;
-  }
+.box-description h2 {
+  font-family: FuturaDisplayBQ;
+  font-size: 32px;
+  color: #2B835F;
+  letter-spacing: .1em;
+  margin-bottom: 0;
+}
 
-  .midoriya-img {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    width: 500px;
-    height: 485px;
-    border-style: solid;
-    border-color: #76BA9F;
-    border-width: 15px;
-    border-radius: 260px;
-  }
+.box-description p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  color: #28282B;
+  margin-top: 10px;
+  line-height: 25px;
+  text-indent: 35px;
+}
 
-  .container {
-    width: max-content;
-    height: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 8rem;
-    padding: 5px;
-    display: block;
-    background-image: linear-gradient(to top left, #76BA9F, #2B8360, #045233);
-    border-radius: 10px;
-  }
+.box-description ul {
+  list-style-type: circle;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  line-height: 25px;
+  margin-top: 10px;
+  color: #28282B;
+}
 
-  .content {
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin-top: 7rem;
-    margin-left: 4rem;
-    margin-right: 7rem;
-    width: 28rem;
-    height: 38rem;
-    border-radius: 10px;
-    background-color: #FAF7EE;
-    box-shadow: 0 8px 3px 5px rgba(0, 0, 0, .5);
-  }
+.box-group-photo {
+  width: max-content;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10em;
+  display: block;
+}
 
-  .content li {
-    list-style-type: square;
-    font-family: 'Bitter', serif;
-    font-size: 18px;
-    line-height: 20px;
-    margin-top: 10px;
-    margin-right: 10px;
-    color: #1B1212;
-  }
+.box-group-photo img {
+  width: 1190px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-style: solid;
+  border-color: #F9F6EE;
+  border-width: 5px;
+  border-radius: 25px;
+}
 
-  .picture {
-    margin-top: 6rem;
-    margin-right: 4rem;
-    margin-left: 7rem;
-    display: inline-block;
-    border-radius: 15px;
-  }
+.box-group-photo p {
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  color: #28282B;
+  margin-left: 15px;
+  font-style: oblique;
+}
 
-  .picture:hover {
-    background-image: linear-gradient(210deg,#20B2AA, #00CED1, #40E0D0, #00FFFF, #E0FFFF, #FFF5EE, #FFFFFF);
-  }
+hr {
+  height: 2px;
+  background-color: #F9F6EE;
+  margin-top: 5em;
+}
 
-  .picture h4 {
-    height: 38rem;
-    width: 28rem;
-    text-align: left;
-    justify-content: left;
-    box-shadow: none;
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 0;
-    position: absolute;
-    opacity: 0;
-  }
+.deku-friends {
+  font-family: FuturaDisplayBQ;
+  font-size: 32px;
+  color: #F9F6EE;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
 
-  .picture h4:hover {
-    opacity: 1;
-    letter-spacing: 3px;
-    color: yellow;
-    font-size: 38px;
-    font-family: FuturaDisplayBQ;
-  }
+.friends-list {
+  width: 230px;
+  height: 65px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  padding-bottom: 15px;
+  display: block;
+}
 
-  .group-photo {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    border-radius: 15px;
-    margin-top: 80px;
-    border-style: solid;
-    border-color: #2B835F;
-    border-width: 10px;
-  }
+.friends-list img {
+  width: 60px;
+  height: 40px;
+  margin-top: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  padding-top: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 15px;
+  display: inline-block;
+  filter: grayscale(100%);
+  border-style: solid;
+  border-color: #F9F6EE;
+  border-width: 2px;
+  border-radius: 40px;
+}
 
-  .group-photo-caption {
-    color: #2B835F;
-    font-size: 16px;
-    font-style: italic;
-    padding-left: 7em;
-  }
+.friends-list img:hover {
+  filter: grayscale(0%);
+  background-color: #76BA9F;
+  border-radius: 10px;
+  transition: .5s ease;
+}
 
-  .friends-list {
-    width: 350px;
-    height: 110px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 10px;
-    margin-top: 0;
-    display: block;
-  }
+footer {
+  background-color: #28282B;
+  margin-top: 50px;
+}
 
-  .friends-list img {
-    width: 90px;
-    height: 80px;
-    display: inline-block;
-    margin-left: 15px;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 0;
-  }
+footer p {
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  color: #F9F6EE;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
 
-  .friends-list img:hover {
-    background-color: #2B835F;
-    border-radius: 20px;
-    transition: .6s ease;
-  }
-
-  .deku-friends {
-    text-align: center;
-    margin-bottom: 0;
-    margin-top: 0;
-    color: #2B835F;
-  }
+.link a {
+  text-decoration: none;
+  color: #76BA9F;
+}
