--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ header h1 {
 }
 
 .box-description ul {
-  list-style-type: circle;
+  list-style-type: disc;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 25px;
